Opened 15 years ago

Closed 15 years ago

#119 closed defect (fixed)

ffplay freezes with misidentified file as mp1

Reported by: ami_stuff Owned by:
Priority: normal Component: ffplay
Version: git Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://samples.multimedia.cx/game-formats/cup/spyfox2/spy2preview.cup

the file is misidentified as mp1 and freezes ffplay

maybe there is a need for check in ffplay if there is more available audio channels than 0?

C:\>ffmpeg -i "C:\spy2preview.cup"
FFmpeg version git-N-29181-ga304071, Copyright (c) 2000-2011 the FFmpeg develope
rs
  built on Apr 18 2011 21:24:03 with gcc 4.5.2
  configuration: --enable-gpl --enable-version3 --enable-runtime-cpudetect --ena
ble-memalign-hack --enable-avisynth --enable-bzlib --enable-frei0r --enable-libo
pencore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --
enable-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger
 --enable-libspeex --enable-libtheora --enable-libvorbis --enable-libvpx --enabl
e-libx264 --enable-libxavs --enable-libxvid --enable-zlib --cross-prefix=i686-w6
4-mingw32- --target-os=mingw32 --arch=x86_32 --extra-cflags=-I/home/kyle/softwar
e/ffmpeg/external-libraries/win32/include --extra-ldflags=-L/home/kyle/software/
ffmpeg/external-libraries/win32/lib --pkg-config=pkg-config
  libavutil    50. 40. 1 / 50. 40. 1
  libavcodec   52.120. 0 / 52.120. 0
  libavformat  52.108. 0 / 52.108. 0
  libavdevice  52.  4. 0 / 52.  4. 0
  libavfilter   1. 79. 0 /  1. 79. 0
  libswscale    0. 13. 0 /  0. 13. 0
[NULL @ 01CEC000] Format detected only with low score of 1, misdetection possibl
e!
[mp3 @ 01CEE890] Header missing
    Last message repeated 234 times
[mp3 @ 01CEC000] Estimating duration from bitrate, this may be inaccurate
Input #0, mp3, from 'C:\spy2preview.cup':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0.0: Audio: mp1, 0 channels, s16
At least one output file must be specified

Attachments (1)

ffplay.diff (388 bytes ) - added by ami_stuff 15 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by Carl Eugen Hoyos, 15 years ago

Component: undeterminedFFplay
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit

comment:2 by ami_stuff, 15 years ago

The attached patch seems to fix the problem.

by ami_stuff, 15 years ago

Attachment: ffplay.diff added

comment:3 by Michael Niedermayer, 15 years ago

Resolution: fixed
Status: openclosed

thx for the patch, i fixed it slightly differently. But the patch helped me quickly identify what is wrong.

Note: See TracTickets for help on using tickets.