ffplay: error out with invalid sample rate or channels.

Fixes Ticket119
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>